@@ -57,7 +57,11 @@ limitations under the License.
                 android:orientation="vertical"
                 android:gravity="center_vertical">
 
-            <TextView
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
                     android:id="@+id/contactName"
                     android:layout_width="wrap_content"
                     android:singleLine="true"
@@ -66,6 +70,19 @@ limitations under the License.
                     android:textColor="@color/light_text"
                     android:paddingRight="12dp"
                     android:paddingTop="10dp"/>
+
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_width="wrap_content"
+                    android:singleLine="true"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:textColor="@color/light_text"
+                    android:paddingRight="12dp"
+                    android:paddingTop="10dp"
+                    android:fontFamily="sans-serif-light"/>
+
+            </LinearLayout>
 
             <TextView
                     android:id="@+id/contactText"
